send file to mail

--- a/src/templates/score.hbs
+++ b/src/templates/score.hbs
@@ -1,3 +1,3 @@
-<p>Hello, {{name}}!</p>
-<p>{{info}}</p>
-<p>Date received: {{date}}</p>
+<p>Chúc mừng {{name}}, bạn vừa có kết quả học tập môn {{subject}}!</p>
+<p>Bạn đạt {{score}} điểm.</p>
+<p>Date: {{date}}</p>
